[tool.poetry]
authors = ["admin <admin@example.com>"]
description = "FastAPI project generated using minimal-fastapi-postgres-template."
name = "app"
version = "0.1.0-alpha"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
freezegun = "^1.5.1"
gevent = "^24.2.1"
httpx = "^0.28.1"
mypy = "^1.11.2"
pre-commit = "^4.1.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.9.3"
types-passlib = "^1.7.7.20240819"
uvicorn = { extras = ["standard"], version = "^0.34.0" }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov --cov-report xml --cov-report term-missing --cov-fail-under=100"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.coverage.run]
concurrency = ["gevent"]
omit = ["app/tests/*"]
source = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501"]
select = ["E", "F", "I", "PL", "UP", "W"]
